2006-07-26  Alan Modra  <amodra@bigpond.net.au>

	* ldlang.c: Formatting.

2006-07-25  Bob Wilson  <bob.wilson@acm.org>

	* emultempl/xtensaelf.em (xtensa_strip_inconsistent_linkonce_sections):
	Set discarded section's output_section to bfd_abs_section_ptr.

2006-07-26  Alan Modra  <amodra@bigpond.net.au>

	* ldlang.c (analyze_walk_wild_section_handler): Init handler_data
	earlier.

2006-07-24  Bob Wilson  <bob.wilson@acm.org>

	* emultempl/xtensaelf.em (is_inconsistent_linkonce_section): Add space
	in dep_sec_name for null terminator.  Make sure dep_sec_name has a
	".t" linkonce tag.

2006-07-14  Michael Wetherell  <mike.wetherell@ntlworld.com>

	* emulparams/elf_x86_64.sh (LIBPATH_SUFFIX, ELF_INTERPRETER_NAME):
	Set for *-*-solaris2*.

2006-07-24  Ralk Wildenhues  <Ralf.Wildenhues@gmx.de>

	* ld.texinfo: Fix spelling mistakes.
	* ldint.texinfo: Likewise.

2006-07-23  Sonal Santan  <sonal.santan@xilinx.com>

	* ldlang.c (lang_section_bst): New structure for sorting sections
	by name.
	(wild_sort_fast): New function: Insert a section into a binary
	search tree.
	(output_section_callback_fast): New function: Store a section in
	BST.
	(output_section_callback_tree_to_list): New function: Convert a
	BST into a list.
	(analyze_walk_wild_section_handler): Initialize handler_data
	elements.
	(wild): If the data is sorted by name use the BST method to sort
	the names.

2006-07-19  Alan Modra  <amodra@bigpond.net.au>

	* ld.h (handle_asneeded_cref): Declare.
	* ldcref.c: Include objalloc.h.
	(old_table, old_count, old_tab, alloc_mark): New variables.
	(tabsize, entsize, refsize, old_symcount): Likewise.
	(add_cref): Use bfd_hash_allocate for refs.
	(handle_asneeded_cref): New function.
	* ldmain.c (notice): Call handle_asneeded_cref for NULL name.

2006-07-14  Michael Wetherell  <mike.wetherell@ntlworld.com>

	* configure.tgt (i[3-7]86-*-solaris2*, i[3-7]86-*-solaris*): Correct
	typo setting targ_extra_libpath.

2006-07-10  Jakub Jelinek  <jakub@redhat.com>
